# statforge

./: .gitignore  404.html  LICENSE  README.md  index.html  landing.html  pyproject.toml
.github/workflows/: deploy_pages.yml
cli/: index.html
contributing/: index.html
data-formats/: index.html
docs/: landing.html
getting-started/: index.html
search/: search_index.json
services/: index.html
